--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,4 +10,5 @@ dependencies = [
     "langfuse>=3.8.1",
     "openai-agents>=0.4.2",
     "openinference-instrumentation-openai-agents>=1.3.0",
+    "pydantic>=2.12.3",
 ]
